==> Tang-JingWei/msp432/my_msp_demo/keil/Hardware/MOTOR/motor.c <==
#include "motor.h"

void Set_Left_Speed(uint16_t L_pwm)
{
  /* 改变compare值以改变占空比 */
  MAP_Timer_A_setCompareValue(TIMER_A0_BASE, TIMER_A_CAPTURECOMPARE_REGISTER_1, L_pwm);
  Now_Left_Pwm = L_pwm;
}

void Set_Right_Speed(uint16_t R_pwm)
{
  /* 改变compare值以改变占空比 */
  MAP_Timer_A_setCompareValue(TIMER_A0_BASE, TIMER_A_CAPTURECOMPARE_REGISTER_2, R_pwm);
  Now_Right_Pwm = R_pwm;
}

void Motor_L_forward()
{
  /*  AIN1---AIN2  */
  /*   0------1  */
  GPIO_setOutputLowOnPin(AIN1_GPIO_Port, AIN1_Pin);
  GPIO_setOutputHighOnPin(AIN2_GPIO_Port, AIN2_Pin);
  left_en_flag = 1;
}

void Motor_L_back()
{
  /*  AIN1---AIN2  */
  /*   1------0  */
  GPIO_setOutputHighOnPin(AIN1_GPIO_Port, AIN1_Pin);
  GPIO_setOutputLowOnPin(AIN2_GPIO_Port, AIN2_Pin);
  left_en_flag = 1;
}

void Motor_L_stop()
{
  /*  AIN1---AIN2  */
  /*   0------0  */
  GPIO_setOutputLowOnPin(AIN1_GPIO_Port, AIN1_Pin);
  GPIO_setOutputLowOnPin(AIN2_GPIO_Port, AIN2_Pin);
  left_en_flag = 0;
}

void Motor_R_forward()
{
  /*  BIN1---BIN2  */
  /*   0------1  */
  GPIO_setOutputLowOnPin(BIN1_GPIO_Port, BIN1_Pin);
  GPIO_setOutputHighOnPin(BIN2_GPIO_Port, BIN2_Pin);
  right_en_flag = 1;
}

void Motor_R_back()
{
  /*  BIN1---BIN2  */
  /*   1------0  */
  GPIO_setOutputHighOnPin(BIN1_GPIO_Port, BIN1_Pin);
  GPIO_setOutputLowOnPin(BIN2_GPIO_Port, BIN2_Pin);
  right_en_flag = 1;
}

void Motor_R_stop()
{
  /*  BIN1---BIN2  */
  /*   0------0  */
  GPIO_setOutputLowOnPin(BIN1_GPIO_Port, BIN1_Pin);
  GPIO_setOutputLowOnPin(BIN2_GPIO_Port, BIN2_Pin);
  // right_en_flag = 0;
}

void Encoder_Configuration(void)
{
  /*配置为浮空输入引脚*/
  GPIO_setAsInputPin(GPIO_PORT_P1, GPIO_PIN6);
  GPIO_setAsInputPin(GPIO_PORT_P1, GPIO_PIN7);
  GPIO_setAsInputPin(GPIO_PORT_P2, GPIO_PIN6);
  GPIO_setAsInputPin(GPIO_PORT_P2, GPIO_PIN7);

  /*开启外部中断*/
  GPIO_enableInterrupt(GPIO_PORT_P1, GPIO_PIN6);
  GPIO_enableInterrupt(GPIO_PORT_P1, GPIO_PIN7); // left motor  P1.6 | P1.7
  GPIO_enableInterrupt(GPIO_PORT_P2, GPIO_PIN6);
  GPIO_enableInterrupt(GPIO_PORT_P2, GPIO_PIN7); // right motor P2.6 | P2.7

  /*开启端口中断*/
  Interrupt_enableInterrupt(INT_PORT1);
  Interrupt_enableInterrupt(INT_PORT2);

  /*配置触发方式*/
  GPIO_interruptEdgeSelect(GPIO_PORT_P1, GPIO_PIN6, GPIO_LOW_TO_HIGH_TRANSITION);
  GPIO_interruptEdgeSelect(GPIO_PORT_P1, GPIO_PIN7, GPIO_LOW_TO_HIGH_TRANSITION);
  GPIO_interruptEdgeSelect(GPIO_PORT_P2, GPIO_PIN6, GPIO_LOW_TO_HIGH_TRANSITION);
  GPIO_interruptEdgeSelect(GPIO_PORT_P2, GPIO_PIN7, GPIO_LOW_TO_HIGH_TRANSITION);

  Interrupt_setPriority(INT_TA0_0, 1 << 5);
  Interrupt_setPriority(INT_PORT1, 1 << 5);
  Interrupt_setPriority(INT_PORT2, 1 << 5);

  GPIO_clearInterrupt(GPIO_PORT_P1, GPIO_PIN6);
  GPIO_clearInterrupt(GPIO_PORT_P1, GPIO_PIN7);
  GPIO_clearInterrupt(GPIO_PORT_P2, GPIO_PIN6);
  GPIO_clearInterrupt(GPIO_PORT_P2, GPIO_PIN7);
}

void GetMotorPulse(void) //读取电机脉冲
{
  Left_Total_Pulse += Left_Once_Pulse; //累计脉冲	完成一次pid之后要清0
  Right_Total_Pulse += Right_Once_Pulse;

  /* 转轴转速 = 单位时间内的计数值 / 编码器总分辨率=(编码器物理分辨率/4) * 时间系数  */
  Motor_Shaft_Speed = (float)(Left_Once_Pulse * 1000 * 60) / (((ENCODER_TOTAL_RESOLUTION * REDUCTION_RATIO) * SPEED_PID_PERIOD));
 
  SendDataToLcd("Sysinfo.left_v.txt=\"%.2f\"", Motor_Shaft_Speed);
  // printf("电机转轴处转速：%.2f 转/分 \r\n", Motor_Shaft_Speed);
  // printf("电机输出轴转速：%.2f 转/分 \r\n\n", Motor_Shaft_Speed / 20.0); /* 输出轴转速 = 转轴转速 / 减速比 */

  Motor_Shaft_Speed = (float)(Right_Once_Pulse * 1000 * 60) / (((ENCODER_TOTAL_RESOLUTION * REDUCTION_RATIO) * SPEED_PID_PERIOD));

  SendDataToLcd("Sysinfo.right_v.txt=\"%.2f\"", Motor_Shaft_Speed);
  // printf("电机转轴处转速：%.2f 转/分 \r\n", Motor_Shaft_Speed);
  // printf("电机输出轴转速：%.2f 转/分 \r\n\n", Motor_Shaft_Speed / 20.0); /* 输出轴转速 = 转轴转速 / 减速比 */

  // printf("--------------------------------\r\n");

  Left_Once_Pulse = 0;
  Right_Once_Pulse = 0;
}
