==> Tang-JingWei/stm32f407vet6/ours/Users/motor/motor.c <==
#include "motor.h"

void Set_Left_Speed(uint16_t L_pwm)
{
	/* 改变compare值以改变占空比 */
	__HAL_TIM_SetCompare(&Left_PWM_Interrupt, Left_PWM_Channel, L_pwm);
	Now_Left_Pwm = L_pwm;
}

void Set_Right_Speed(uint16_t R_pwm)
{
	/* 改变compare值以改变占空比 */
	__HAL_TIM_SetCompare(&Right_PWM_Interrupt, Right_PWM_Channel, R_pwm);
	Now_Right_Pwm = R_pwm;
}

void Motor_L_forward()
{
	/*  AIN1---AIN2  */
	/*   0------1  */
	HAL_GPIO_WritePin(AIN1_GPIO_Port, AIN1_Pin, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(AIN2_GPIO_Port, AIN2_Pin, GPIO_PIN_SET);
	left_en_flag = 1;
}

void Motor_L_back()
{
	/*  AIN1---AIN2  */
	/*   1------0  */
	HAL_GPIO_WritePin(AIN1_GPIO_Port, AIN1_Pin, GPIO_PIN_SET);
	HAL_GPIO_WritePin(AIN2_GPIO_Port, AIN2_Pin, GPIO_PIN_RESET);
	left_en_flag = 1;
}

void Motor_L_stop()
{
	/*  AIN1---AIN2  */
	/*   0------0  */
	HAL_GPIO_WritePin(AIN1_GPIO_Port, AIN1_Pin, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(AIN2_GPIO_Port, AIN2_Pin, GPIO_PIN_RESET);
	left_en_flag = 0;
}

void Motor_R_forward()
{
	/*  BIN1---BIN2  */
	/*   0------1  */
	HAL_GPIO_WritePin(BIN1_GPIO_Port, BIN1_Pin, GPIO_PIN_SET);
	HAL_GPIO_WritePin(BIN2_GPIO_Port, BIN2_Pin, GPIO_PIN_RESET);
	right_en_flag = 1;
}

void Motor_R_back()
{
	/*  BIN1---BIN2  */
	/*   1------0  */
	HAL_GPIO_WritePin(BIN1_GPIO_Port, BIN1_Pin, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(BIN2_GPIO_Port, BIN2_Pin, GPIO_PIN_SET);
	right_en_flag = 1;
}

void Motor_R_stop()
{
	/*  BIN1---BIN2  */
	/*   0------0  */
	HAL_GPIO_WritePin(BIN1_GPIO_Port, BIN1_Pin, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(BIN2_GPIO_Port, BIN2_Pin, GPIO_PIN_RESET);
	//right_en_flag = 0;
}

void Encoder_Configuration(void)
{
	/* 清零计数器 */
	__HAL_TIM_SET_COUNTER(&Left_MOTOR_Interrupt, 0);
	__HAL_TIM_SET_COUNTER(&Right_MOTOR_Interrupt, 0);

	/* 清零中断标志位 */
	__HAL_TIM_CLEAR_IT(&Left_MOTOR_Interrupt, TIM_IT_UPDATE);
	__HAL_TIM_CLEAR_IT(&Right_MOTOR_Interrupt, TIM_IT_UPDATE);

	/* 使能定时器的更新事件中断 */
	__HAL_TIM_ENABLE_IT(&Left_MOTOR_Interrupt, TIM_IT_UPDATE);
	__HAL_TIM_ENABLE_IT(&Right_MOTOR_Interrupt, TIM_IT_UPDATE);

	/* 设置更新事件请求源为：计数器溢出 */
	__HAL_TIM_URS_ENABLE(&Left_MOTOR_Interrupt);
	__HAL_TIM_URS_ENABLE(&Right_MOTOR_Interrupt);

	/* 使能编码器接口 */
	HAL_TIM_Encoder_Start(&Left_MOTOR_Interrupt, TIM_CHANNEL_ALL);
	HAL_TIM_Encoder_Start(&Right_MOTOR_Interrupt, TIM_CHANNEL_ALL);
}

void GetMotorPulse(void) //读取电机脉冲
{
	/*  左  */
	/* 电机旋转方向 = 计数器计数方向 */
	int i = __HAL_TIM_IS_TIM_COUNTING_DOWN(&Left_MOTOR_Interrupt);
	Left_Once_Pulse = (short)(__HAL_TIM_GET_COUNTER(&Left_MOTOR_Interrupt)); /* 计数器值 */
	__HAL_TIM_SET_COUNTER(&Left_MOTOR_Interrupt, 0);												 /* Left_MOTOR_Interrupt的TIM计数器清零 */
	//printf("left maichong: %d\r\n",Left_Once_Pulse);

	/*  右  */
	/* 电机旋转方向 = 计数器计数方向 */
	int j = __HAL_TIM_IS_TIM_COUNTING_DOWN(&Right_MOTOR_Interrupt);
	Right_Once_Pulse = (short)(__HAL_TIM_GET_COUNTER(&Right_MOTOR_Interrupt)); /* 计数器值 */
	Right_Once_Pulse = -Right_Once_Pulse;
	__HAL_TIM_SET_COUNTER(&Right_MOTOR_Interrupt, 0); /* Right_MOTOR_Interrupt计数器清零 */

	Left_Total_Pulse += Left_Once_Pulse; //累计脉冲	完成一次pid之后要清0
	Right_Total_Pulse += Right_Once_Pulse;

	/* 转轴转速 = 单位时间内的计数值 / 编码器总分辨率=(编码器物理分辨率/4) * 时间系数  */
//	Motor_Shaft_Speed = (float)(Left_Once_Pulse * 1000 * 60) / (((ENCODER_TOTAL_RESOLUTION * REDUCTION_RATIO) * SPEED_PID_PERIOD)) ;
//	
//	printf("电机方向：%d\r\n", i);
//	printf("电机转轴处转速：%.2f 转/分 \r\n", Motor_Shaft_Speed);
//	printf("电机输出轴转速：%.2f 转/分 \r\n\n", Motor_Shaft_Speed / 20.0); /* 输出轴转速 = 转轴转速 / 减速比 */

//	Motor_Shaft_Speed = (float)(Right_Once_Pulse * 1000 * 60) / ((ENCODER_TOTAL_RESOLUTION * REDUCTION_RATIO) * SPEED_PID_PERIOD) ;
//	
//	printf("电机方向：%d\r\n", j);
//	printf("电机转轴处转速：%.2f 转/分 \r\n", Motor_Shaft_Speed);
//	printf("电机输出轴转速：%.2f 转/分 \r\n\n", Motor_Shaft_Speed / 20.0); /* 输出轴转速 = 转轴转速 / 减速比 */

//	printf("--------------------------------\r\n");
}
